crates/toml/tests/snapshots/invalid/inline-table/duplicate-key-01.stderr
TOML parse error at line 2, column 9
  |
2 | a={b=1, b=2}
  |         ^
duplicate key
